# zero2prod

./: .gitignore  Cargo.toml
.github/workflows/: api.yaml  general.yaml
docs/: swagger.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
